--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 #spring.datasource.initialization-mode=never
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
