--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
-spring.datasource.url=jdbc:h2:mem:database
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:database
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+##spring.datasource.initialization-mode=never
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-#spring.datasource.initialization-mode=never
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/proposal
+
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.datasource.initialization-mode=always
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
