--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+#management.endpoint.health.show-details=when_authorized
+management.endpoint.health.show-components=always
+#management.endpoint.health.show-components=when-authorized
