--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #management.endpoint.health.show-details=when_authorized
 management.endpoint.health.show-components=always
 #management.endpoint.health.show-components=when-authorized
+
+deplay.check.card.task=${CHECK_CARD_TASK_DELAY:10000}
