--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 management.endpoint.health.show-components=always
 #management.endpoint.health.show-components=when-authorized
 
-deplay.check.card.task=${CHECK_CARD_TASK_DELAY:10000}
+deplay.check.card.task=${CHECK_CARD_TASK_DELAY:40000}
+
+feign.client.config.checkCardProposal.connectTimenout=5000
+feign.client.config.checkCardProposal.readTimeout=5000
+feign.client.config.checkClientFinancialStatus.connectTimenout=5000
+feign.client.config.checkClientFinancialStatus.readTimenout=5000
