--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+deplay.check.card.task=${CHECK_CARD_TASK_DELAY:40000}
+
+feign.client.config.checkCardProposal.connectTimenout=5000
+feign.client.config.checkCardProposal.readTimeout=5000
+feign.client.config.checkClientFinancialStatus.connectTimenout=5000
+feign.client.config.checkClientFinancialStatus.readTimenout=5000
