--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,12 @@ services:
     volumes:
       - mariadb-volume:/var/lib/mysql
     ports:
-      - 3307:3306
+      - 3306:3306
     environment:
-      MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: proposal
-      MYSQL_HOST: mysql
+    networks:
+      - proposal-net
 
   proposta:
     build:
@@ -54,25 +54,15 @@ services:
     depends_on:
       - mariadb
       - analise
-      - contas
-      - keycloak
-      - jaeger
-      - prometheus
     ports:
-      - 8090:8090
+      - 8080:8080
     environment:
-      PORT: 8090
-      DB_URL: mariadb
-      DB_USERNAME: root
-      DB_PASSWORD: root
-      ANALISE_SERVICE: analise
-      ACCOUNT_SERVICE: contas
-      KEYCLOAK_ISSUER_URI: http://keycloak:8080/auth/realms/proposta
-      KEYCLOAK_JWKS_URI: http://keycloak:8080/auth/realms/proposta/protocol/openid-connect/certs
-      AUTH_CLIENT_URL: http://keycloak:8080/auth/realms/proposta/protocol/openid-connect/token
-      METRICS_NOME_DA_APLICACAO: proposta
-      METRICS_AMBIENTE: development
-      JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+      DB_PORT: 3306
+      DB_HOST: mariadb
+      DB_NAME: proposal
+      CHECK_CARD_TASK_DELAY: 60000
+    networks:
+      - proposal-net
 
   keycloak:
     image: jboss/keycloak
@@ -111,6 +101,8 @@ services:
       LOG_LEVEL: INFO
       URL_SISTEMA_CARTAO: http://contas:8888/api/cartoes
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+    networks:
+      - proposal-net
 
   contas:
     image: 'zupacademy/contas'
@@ -120,6 +112,8 @@ services:
       SERVER_PORT: 8888
       LOG_LEVEL: INFO
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+    networks:
+      - proposal-net
 
   transacoes:
     image: 'zupacademy/transacoes'
@@ -146,6 +140,8 @@ services:
       - 9411:9411
     environment:
       COLLECTOR_ZIPKIN_HTTP_PORT: 9411
+    networks:
+      - proposal-net
 
   prometheus:
     image: prom/prometheus
@@ -179,3 +175,8 @@ volumes:
   prometheus-volume:
   postgres-volume:
   mariadb-volume:
+
+networks:
+  proposal-net:
+    name: proposal_net
+    driver: bridge
