--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:mariadb://${DB_URL:localhost}:3307/proposal
+spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:proposal}
 
 spring.datasource.username=root
 spring.datasource.password=root
