--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,7 @@ feign.client.config.checkCardProposal.connectTimenout=5000
 feign.client.config.checkCardProposal.readTimeout=5000
 feign.client.config.checkClientFinancialStatus.connectTimenout=5000
 feign.client.config.checkClientFinancialStatus.readTimenout=5000
+
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposal}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposal/protocol/openid-connect/certs}
