COnfiguring prometheus and applying some security configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,14 @@ feign.client.config.checkClientFinancialStatus.readTimenout=5000
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposal}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposal/protocol/openid-connect/certs}
+
+
+## Prometheus with Actuator
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.web.exposure.exclude=env,beans
+management.endpoints.prometheus.enabled=true
+management.endpoints.web.cors.allowed-origins=http://localhost:8080
+management.endpoints.web.cors.allowed-methods=GET
+
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:serviço de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
